<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WildLifeCapture</string>
    <string name="basicContentDesc">Content Description</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="settings_title"></string>
    <string name="ok_text">OK</string>
    <string name="sharedPref_key">MOVINGIMAGES</string>
    <string name="file_locations_title">Folder and File Locations</string>
    <string name="gallery_key">imageGallery</string>
    <string name="gallery_default">.PhotoSnapper</string>
    <string name="gallery_title">Image Gallery</string>
    <string name="gallery_summary">Full path to images</string>
    <string name="gallery_burst">.BurstCapture</string>
    <string name="processed_key">processedImages</string>
    <string name="processed_default">.Processed</string>
    <string name="processed_title">Processed Images</string>
    <string name="processed_summary">Full path to processed images</string>
    <string name="chips_key">chipsGallery</string>
    <string name="chips_default">.ImageChips</string>
    <string name="posExemplars_key">posExemplars</string>
    <string name="posExemplars_default">.PositiveExemplars</string>
    <string name="chips_title">Image Chips</string>
    <string name="chips_summary">Full path to image chips</string>
    <string name="model_key">svmModelFiles</string>
    <string name="model_default">ExemplarModels</string>
    <string name="model_title">Model files</string>
    <string name="model_summary">Full path to SVM model files</string>
    <string name="modelName_key">svmModelName</string>
    <string name="modelName_default">Squirrel31</string>
    <string name="modelName_title">Model Name</string>
    <string name="modelName_summary">Name of ExemplarSVM model file</string>
    <string name="negExemplar_key">negativeExemplarFolder</string>
    <string name="negExemplar_default">negExemplars</string>
    <string name="negExemplar_title">Negative Exemplar Folder</string>
    <string name="negExemplar_summary">Path to Negative Exemplar Folder</string>
    <string name="posExemplarMax_key">posExemplarMaxFolder</string>
    <string name="posExemplarMax_default">posExemplarsMax</string>
    <string name="posExemplarMax_title">Positive Exemplar Max Val Folder</string>
    <string name="posExemplarMax_summary">Path to Positive Exemplar Max Val Folder</string>
    <string name="posExemplarMin_key">posExemplarMinFolder</string>
    <string name="posExemplarMin_default">posExemplarsMin</string>
    <string name="posExemplarMin_title">Positive Exemplar Min Val Folder</string>
    <string name="posExemplarMin_summary">Path to Positive Exemplar Min Val Folder</string>
    <string name="processlog_key">processLog</string>
    <string name="processlog_default">squirrel_process_log.txt</string>
    <string name="processlog_title">Process Log</string>
    <string name="processlog_summary">Full path to image processing log</string>
    <string name="output_key">outputFile</string>
    <string name="output_default">squirrel_output.txt</string>
    <string name="output_title">Output File</string>
    <string name="output_summary">Full path to output file</string>
    <string name="applog_key">appLog</string>
    <string name="applog_default">squirrel_app_log.txt</string>
    <string name="applog_title">Application Log</string>
    <string name="applog_summary">Full path to general application log</string>
    <string name="start_title">Start Time</string>
    <string name="start_key">start_key</string>
    <string name="stop_title">Stop Time</string>
    <string name="stop_key">stop_key</string>
    <string name="faq_title">Preferences - Frequently Asked Questions</string>
    <string name="camera_title">Camera Settings</string>
    <string name="general_stuff">General</string>
    <string name="general_swindow">Sliding Window Params</string>
    <string name="device_title">Device</string>
    <string name="dLocation_key">deviceLocation</string>
    <string name="dLocation_default">defaultLocation</string>
    <string name="dLocation_title">Device Location</string>
    <string name="dLocation_summary">Where this device is physically located.</string>
    <string name="dID_key">deviceID</string>
    <string name="dID_default">0</string>
    <string name="dID_title">Device ID</string>
    <string name="dID_summary">The ID given to this device.</string>
    <string name="delete_key">deleteFilesAfter</string>
    <string name="delete_default">false</string>
    <string name="delete_title">Delete Images</string>
    <string name="delete_summary">Do you want to delete images taken after finish processing them?</string>
    <string name="skip_key">skipJNI</string>
    <string name="skip_default">false</string>
    <string name="skip_title">Skip Image Processing</string>
    <string name="skip_summary">Do you want to skip processing the images? (Check to only take pictures)</string>
    <string name="appRunning_key">apprunning</string>
    <string name="appRunning_default">false</string>
    <string name="reset_key">resetSettings</string>
    <string name="reset_title">Reset</string>
    <string name="title_activity_freq_changer">FreqChanger</string>
    <string name="action_settings">Settings</string>
    <string name="curfreqstr">Current Photo Capture Frequency:</string>
    <string name="newphotocapprompt">Enter the new photo capture frequency:</string>
    <string name="return_btn_text">Return to program.</string>
    <string name="title_activity_change_resolution">ChangeResolutionActivity</string>
    <string name="res_back_btn_text">Back to SquirrelGPU</string>
    <string name="selection_prodder">Please select one of the listed resolutions.</string>
    <string name="num_cap_clock">Enter the new number of captures per clock:</string>
    <string name="title_section_list">Sections</string>
    <string name="title_section_detail">Section Detail</string>
    <string name="title_activity_documentation">Documentation</string>
    <string name="menu_startStop">Start/Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_changeFreq">Change Freq.</string>
    <string name="menu_toggleOld">Toggle use of old method.</string>
    <string name="menu_runVidCap">Run video capture.</string>
    <string name="menu_imageComp">Do image computation</string>
    <string name="menu_calibrate">Make an attempt to calibrate the camera.</string>
    <string name="menu_burstTest">Burst test.</string>
    <string name="menu_displayRam">Display current RAM</string>
    <string name="menu_resActivity">ResActivity</string>
    <string name="menu_procImageLog">Process image log.</string>
    <string name="menu_setRes">Set resolution.</string>
    <string name="menu_camHeight">Set camera height</string>
    <string name="menu_minLenWidth">Set minimum length and width.</string>
	<string name="menu_maxLenWidth">Set maximum length and width.</string>
    <string name="menu_help">Help</string>
    <string name="menu_debugStart">----  DEBUG ITEMS  ---</string>
    <string name="menu_debugEnd">--- END DEBUG ---</string>
    <string name="freq_currentCapFreq">Current Photo Capture Frequency:</string>
    <string name="freq_newCapFreq">Enter the new photo capture frequency:</string>
    <string name="freq_newCapPerClock">Enter the new number captures per clock:</string>
</resources>