<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group_debug" >
        <item
            android:id="@+id/action_seperator"
            android:title="@string/menu_debugStart"
            android:orderInCategory="100"
            />
        <item
            android:id="@+id/action_toggleOld"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_toggleOld"/>
        <item
            android:id="@+id/action_runVidCap"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_runVidCap"/>
        <item
            android:id="@+id/action_imageComp"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_imageComp"/>
        <item
            android:id="@+id/action_calibrate"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_calibrate"/>
        <item
            android:id="@+id/action_burstTest"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_burstTest"/>
        <item
            android:id="@+id/action_displayRam"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_displayRam"/>
        <item
            android:id="@+id/action_resActivity"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_resActivity"/>
        <item
            android:id="@+id/action_seperator2"
            android:title="@string/menu_debugEnd"
            android:orderInCategory="100"
            />
    </group>

    <item
        android:id="@+id/action_startStop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_startStop"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/action_changeFreq"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_changeFreq"/>
    <item
        android:id="@+id/action_procImageLog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_procImageLog"/>
    <item
        android:id="@+id/action_setRes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_setRes"/>
    <item
        android:id="@+id/action_camHeight"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_camHeight"/>
    <item
        android:id="@+id/action_minLenWidth"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_minLenWidth"/>
    <item
        android:id="@+id/action_maxLenWidth"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_maxLenWidth"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>